--- a/HW2.qmd
+++ b/HW2.qmd
@@ -235,3 +235,57 @@ S2_total <- S2_within + S2_between
 # Results
 c(S2_within, S2_between, S2_total)
 ```
+
+## g) What are the design effects of the proportionate and Neyman allocations? based on the results?
+
+So the design effect (DEFF) is the ratio of the variance of a stratified design to that of simple random sampling:
+
+$$DEFF = \frac{V(\bar{y}_{st})}{V(\bar{y}_{srs})}$$
+
+where:
+- $V(\bar{y}_{st})$ is the variance under stratified sampling
+- $V(\bar{y}_{srs}) = (\frac{S^2}{n})(1-f)$ is the variance under SRS
+- $S^2$ is the total element variance 
+- $f = n/N$ is the sampling fraction
+
+```{r}
+# Given data
+Nh <- c(20, 90, 120, 140, 200)
+Yh_bar <- c(46800, 61500, 76100, 89500, 95500)
+Sh <- c(81200, 101700, 130900, 170100, 216400)
+n <- 100
+
+# Calculate weights
+N <- sum(Nh)
+Wh <- Nh / N
+
+# Calculate overall mean
+Y_bar <- sum(Wh * Yh_bar)
+
+# Calculate total element variance (S^2)
+S2 <- sum(Wh * Sh^2) + sum(Wh * (Yh_bar - Y_bar)^2)
+
+# Variance of SRS
+V_SRS <- S2 / n
+
+# Proportionate allocation
+n_prop <- n * (Nh / N)
+V_prop <- sum(Wh^2 * (Sh^2 / n_prop - Sh^2 / Nh))
+
+# Neyman allocation
+n_neyman <- n * (Nh * Sh) / sum(Nh * Sh)
+V_neyman <- (sum(Wh * Sh))^2 / n
+
+# Calculate DEFF
+DEFF_prop <- V_prop / V_SRS
+DEFF_neyman <- V_neyman / V_SRS
+
+# Print results
+cat("DEFF for proportionate allocation:", DEFF_prop, "\n")
+cat("DEFF for Neyman allocation:", DEFF_neyman, "\n")
+```
+
+Ok so both the proportionate and Neyman allocations have design effects less than 1. It means they're both more efficient than simple random sampling. The proportionate allocation has a DEFF of about 0.82, while the Neyman allocation's DEFF is around 0.92. In simpler terms, the proportionate allocation is reducing the variance by about 18% compared to simple random sampling, while the Neyman allocation is reducing it by about 8%.
+
+This suggests that for this particular population structure, the simpler proportionate allocation method is actually more effective at improving precision than the more complex Neyman allocation. It's a good reminder that sometimes, simpler methods can outperform more sophisticated ones depending on the specific characteristics of the data we're working with (Occam's Razor!)
+
