--- a/HW2.qmd
+++ b/HW2.qmd
@@ -14,7 +14,7 @@ editor: visual
 | 4 | Engineering | 140 | 89,500 | 170,100 |
 | 5 | Business | 200 | 95,500 | 216,400 |
 
-## a) Now what is What is the mean starting salary per graduate across all departments in the $\bar{Y}_h$ population, based on the data collected from this previous attempted census?
+## a) Now what is the mean starting salary per graduate across all departments in the $\bar{Y}_h$ population, based on the data collected from this previous attempted census?
 
 The overall mean salary $\bar{Y}$ is calculated as:
 
@@ -58,9 +58,14 @@ where:
 
 $$\begin{aligned}
 S^2_w &= \sum_{h=1}^{5} \frac{N_h}{N} S^2_h \\
-&= \frac{20}{570}(81,200)^2 + \frac{90}{570}(101,700)^2 + \frac{120}{570}(130,900)^2 + \frac{140}{570}(170,100)^2 + \frac{200}{570}(216,400)^2
+&= \frac{20}{570}(81,200)^2 + \frac{90}{570}(101,700)^2 + \frac{120}{570}(130,900)^2 + \frac{140}{570}(170,100)^2 + \frac{200}{570}(216,400)^2 \\
+&= \frac{20}{570}(6,593,440,000) + \frac{90}{570}(10,342,890,000) + \frac{120}{570}(17,134,810,000) + \\
+&\quad \frac{140}{570}(28,934,010,000) + \frac{200}{570}(46,828,960,000) \\
+&= 231,347,368 + 1,633,613,684 + 3,607,328,421 + 7,095,669,474 + 16,441,619,123 \\
+&= 29,009,578,070
 \end{aligned}
 $$
+
 
 Now The R code for this will be:
 ```{r}
