changes made in the formulae

--- a/HW2.qmd
+++ b/HW2.qmd
@@ -169,16 +169,21 @@ V(\bar{y}_{prop}) &= \sum_{h=1}^{H} W_h^2 (\frac{1}{n_h} - \frac{1}{N_h}) S_h^2 
 \end{aligned}$$
 
 $$\begin{aligned}
-V(\bar{y}_{prop}) &= \frac{1}{100}(1-\frac{100}{570})\sum_{h=1}^{5} W_h S_h^2 \\
-&= \frac{1}{100}(0.825)\sum_{h=1}^{5} \frac{N_h}{570} S_h^2 \\
-&= 0.00825 \times [(20/570)(81,200)^2 + (90/570)(101,700)^2 + \\
-&\quad (120/570)(130,900)^2 + (140/570)(170,100)^2 + (200/570)(216,400)^2]
+V(\bar{y}_{prop}) &= 0.00825 \times [(20/570)(81,200)^2 + (90/570)(101,700)^2 + \\
+&\quad (120/570)(130,900)^2 + (140/570)(170,100)^2 + (200/570)(216,400)^2] \\
+&= 0.00825 \times [231,347,368 + 1,633,613,684 + 3,607,328,421 + \\
+&\quad 7,095,669,474 + 16,441,619,123] \\
+&= 0.00825 \times 29,009,578,070 \\
+&= 290,095,781
 \end{aligned}$$
 
 For Neyman Allocation:
-$$V(\bar{y}_{neyman}) = \frac{(\sum_{h=1}^{H} N_h S_h)^2}{n N^2}(1-f)$$
 $$\begin{aligned}
-V(\bar{y}_{neyman}) &= \frac{(20 \times 81,200 + 90 \times 101,700 + 120 \times 130,900 + 140 \times 170,100 + 200 \times 216,400)^2}{100 \times 570^2}(0.825)
+V(\bar{y}_{neyman}) &= \frac{(20 \times 81,200 + 90 \times 101,700 + 120 \times 130,900 + 140 \times 170,100 + 200 \times 216,400)^2}{100 \times 570^2}(0.825) \\
+&= \frac{(1,624,000 + 9,153,000 + 15,708,000 + 23,814,000 + 43,280,000)^2}{100 \times 570^2}(0.825) \\
+&= \frac{(93,579,000)^2}{100 \times 324,900}(0.825) \\
+&= \frac{8,757,027,241,000}{32,490,000}(0.825) \\
+&= 269,529,986
 \end{aligned}
 $$
 
